@@ -1,3 +1,5 @@
+* Campaign Monitoring: place incoming queue calls as the last items in the 
+  drop-down list.
 * Campaign Monitoring: append available campaigns to report list instead of 
   indexing by ID. Fixes Elastix bug #1496.
 * Dialer: Check whether the agent is on break before deciding that it should
